force-app/main/default/objects/TLO_Related_Organization__c/TLO_Related_Organization__c.object-meta.xml
<CustomObject>
    <label>TLO Related Organization</label>
    <nameField>
        <displayFormat>AFL-{0000000}</displayFormat>
        <label>Affiliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TLO Related Organizations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>