force-app/main/default/objects/TLO_Related_Organization__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Affiliated_Accounts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>