force-app/main/default/objects/TLO_Related_Organization__c/fields/Is_Special_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Is_Special_Affiliation__c</fullName>
    <formula>Account__r.Is_Special_Affiliate__c</formula>
    <label>Is Special Affiliation</label>
    <type>Checkbox</type>
</CustomField>